<resources>
    <string name="app_name">Bracket Buddy</string>
    <string name="title_seeding">Seeding</string>
    <string name="title_call">Call</string>
    <string name="title_report">Report</string>
    <string name="title_finance">Finance</string>
    <string name="title_analysis">Analysis</string>
    <string name="change_seed">Change seed</string>
    <string name="to">to</string>
    <string name="confirm_button">Confirm</string>
    <string name="update_button">Upload to Start gg</string>
    <string name="title_app">Bracket Buddy</string>
    <string name="login_button">LOG IN</string>
    <string name="tournament_view_title">Select Tournament</string>
    <string name="no_tournaments_message">You do not have any upcoming tournaments.</string>
    <string name="event_view_title">Select Event</string>
    <string name="no_events_message">This tournament does not have any events.</string>
    <string name="upcoming_sets">Upcoming Sets:</string>
    <string name="ongoing_sets">Ongoing Sets:</string>
    <string name="stations_button">Configure Stations</string>
    <string name="call_button">Call Set</string>
    <string name="decline_button">Decline Set</string>
    <string name="stream_button">Change to Stream Setup</string>
    <string name="p2DQ">DQ (P2)</string>
    <string name="p1DQ">DQ (P1)</string>
    <string name="report_set_text">Report Set to Start.gg</string>
    <string name="no_ongoing">There are no ongoing sets right now!</string>
    <string name="no_upcoming">There are no upcoming sets right now!</string>
    <string name="add_tag">Add tag</string>
    <string name="remove_tag">Remove tag</string>
    <string name="add_station">Add station</string>
    <string name="create_tag">Create new tag</string>
    <string name="new_tag_hint">Enter new tag</string>
    <string name="submit_tag">Submit</string>
    <string name="empty_station">Station #</string>
    <string name="empty_tags">Tags:</string>
    <string name="no_stations">There are no stations. Try adding a new station. </string>
    <string name="decline_text">Decline reason:</string>
    <string name="applies_p1">Applies to player 1</string>
    <string name="applies_p2">Applies to player 2</string>
    <string name="title_report_set">Report a Set</string>
    <string name="title_call_set">Call a Set</string>
    <string name="title_station">Configure Stations</string>
    <string name="character_entry">Enter Characters:</string>
    <string name="p1_win">Player 1 Win</string>
    <string name="p2_win">Player 2 Win</string>
    <string name="report_title">Report winner:</string>
    <string name="preview_issue_message">If you are just starting a tournament \nfor the first time, the Start.gg
        servers\nwill take a little while to update the\nsets from preview status. Please try again\nin a bit.
    </string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="report_explanation">Please note that DQs take priority over game data entry.\nDouble DQs result in a
        victory for the first player, but a retroactive DQ if they DQ next round, as is on Start.gg
    </string>
    <string name="phase_warning">Can not switch phases until seeding changes are pushed to Start.gg or if they are
    discarded by switching menus.</string>
    <string name="dash">-</string>
    <string name="get_sets">Get sets from Start.gg</string>
    <string name="get_sets_warning">Warning! If the tournament has not started, pressing this button will force the
        tournament to be marked as in progress on Start.gg. This will prevent you from changing the seeding and can not
        be reverted.</string>
    <string name="dq_priority">(DQs take priority over reported games.)</string>
</resources>