<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/nav_seeding" android:title="@string/title_seeding"
            android:icon="@android:drawable/ic_menu_sort_alphabetically"/>
    <item
            android:id="@+id/nav_call"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_call"/>

    <item
            android:id="@+id/nav_report"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/title_report"/>

    <item
            android:id="@+id/nav_finance"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/title_finance"/>
    <item android:title="@string/title_analysis" android:id="@+id/nav_analysis"
          android:icon="@android:drawable/ic_menu_search"/>

</menu>