<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
            android:layout_width="match_parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_height="wrap_content" android:id="@+id/game_num_title"
            android:layout_marginTop="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="165dp"
            android:textSize="20sp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ToggleButton
                android:layout_width="101dp"
                android:layout_height="wrap_content" android:id="@+id/player1_win" android:layout_weight="1"
                android:text="@string/p1_win" android:textOff="@string/player_1" android:textOn="@string/p1_win"/>
        <ToggleButton
                android:text="@string/p2_win"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/player2_win" android:layout_weight="1"
                android:textOff="@string/player_2" android:textOn="@string/p2_win"/>
    </LinearLayout>
    <TextView
            android:layout_width="387dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_height="wrap_content" android:id="@+id/character_entry"
            android:layout_marginTop="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="165dp"
            android:text="@string/character_entry" android:textSize="20sp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="75dp">
        <Spinner
                android:layout_width="138dp"
                android:layout_height="59dp" android:id="@+id/p1_char_select"
                android:spinnerMode="dropdown"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="59dp" android:id="@+id/p2_char_select"
                android:spinnerMode="dropdown"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"/>
    </LinearLayout>
</LinearLayout>
