<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
            android:layout_width="199dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_height="wrap_content" android:id="@+id/station_title" android:textSize="24sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="183dp"
            android:layout_marginBottom="1dp"
            android:text="@string/empty_station"/>
    <TextView
            android:layout_width="387dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_height="wrap_content" android:id="@+id/station_tags"
            android:layout_marginTop="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="165dp"
            android:text="@string/empty_tags" android:textSize="16sp"/>
    <Spinner
            android:layout_width="138dp"
            android:layout_height="59dp" android:id="@+id/tag_select"
            android:spinnerMode="dropdown"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="10dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <Button
                android:text="@string/add_tag"
                android:layout_width="124dp"
                android:layout_height="wrap_content" android:id="@+id/add_button"
                android:layout_marginStart="20dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="20dp"/>
        <Button
                android:text="@string/remove_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/remove_button"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="13dp"/>
    </LinearLayout>
</LinearLayout>