<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.call.CallStationFragment">

    <view android:layout_width="343dp" android:layout_height="465dp" class="android.widget.ListView"
          android:id="@+id/stations_list"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginStart="34dp" android:layout_marginEnd="34dp" app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="10dp"
          app:layout_constraintBottom_toTopOf="@+id/add_station_button"/>
    <Button
            android:text="@string/add_station"
            android:layout_width="167dp"
            android:layout_height="64dp" android:id="@+id/add_station_button"
            app:layout_constraintTop_toBottomOf="@id/stations_list" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="128dp"
            android:layout_marginEnd="129dp"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="16sp"
            android:layout_marginTop="30dp"/>
    <TextView
            android:text="@string/create_tag"
            android:layout_width="145dp"
            android:layout_height="30dp" android:id="@+id/create_tag"
            app:layout_constraintTop_toBottomOf="@+id/add_station_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="100dp" android:layout_marginEnd="261dp"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="20sp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" android:layout_marginTop="15dp"/>
    <EditText
            android:layout_width="234dp"
            android:layout_height="64dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/new_tag"
            android:hint="@string/new_tag_hint" app:layout_constraintTop_toBottomOf="@+id/create_tag"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="80dp"
            android:layout_marginEnd="171dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
            android:textSize="20sp"/>
    <TextView
            android:text="@string/no_stations"
            android:layout_width="325dp"
            android:layout_height="245dp" android:id="@+id/no_stations"
            android:textSize="48sp"
            app:layout_constraintTop_toTopOf="@id/stations_list"
            app:layout_constraintStart_toStartOf="@id/stations_list"/>
    <Button
            android:text="@string/submit_tag"
            android:layout_width="102dp"
            android:layout_height="55dp" android:id="@+id/submit_tag"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/add_station_button" android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@+id/new_tag" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="80dp" android:layout_marginEnd="33dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>