<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.report.ReportSetFragment">

    <Button
            android:text="@string/report_set_text"
            android:layout_width="249dp"
            android:layout_height="72dp" android:id="@+id/mutate_set_button"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/call_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="102dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="110dp" android:layout_marginEnd="103dp"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="20sp"/>
    <TextView
            android:id="@+id/text_mini"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.066"/>
    <TextView
            android:layout_width="331dp"
            android:layout_height="44dp" android:id="@+id/players_title"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="37dp" android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/upcoming_sets" android:layout_marginEnd="43dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textSize="34sp"
            android:includeFontPadding="true" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0" app:autoSizeTextType="uniform"/>
    <CheckBox
            android:text="@string/p1DQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/isP1DQ"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="63dp"
            android:layout_marginTop="5dp" app:layout_constraintTop_toBottomOf="@+id/text_mini"
            android:textSize="16sp"/>
    <CheckBox
            android:text="@string/p2DQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/isP2DQ"
            android:layout_marginEnd="63dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/text_mini" android:textSize="16sp"/>
    <ScrollView
            android:layout_width="409dp"
            android:layout_height="386dp" tools:layout_editor_absoluteX="1dp" android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@+id/isP1DQ"
            app:layout_constraintBottom_toTopOf="@+id/mutate_set_button" android:id="@+id/games_report_menu">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical"/>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>