<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.report.ReportFragment" >

    <Spinner
            android:layout_width="301dp"
            android:layout_height="48dp" android:id="@+id/phase_select"
            android:spinnerMode="dropdown" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="40dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="20dp" android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toTopOf="@+id/seeds_list"/>
    <view android:layout_width="0dp" android:layout_height="0dp" class="android.widget.ListView"
          android:id="@+id/seeds_list" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="100dp"
          app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp"
          app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
          app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="250dp"
          app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/change_seed"
            android:layout_width="110dp"
            android:layout_height="33dp" android:id="@+id/change_seed"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
            android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/seeds_list"
            android:layout_marginEnd="264dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="182dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.407" app:layout_constraintVertical_bias="1.0"/>
    <EditText
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/old_seed"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/seeds_list" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="169dp"
            android:layout_marginEnd="224dp"
            app:layout_constraintEnd_toEndOf="parent" android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" app:layout_constraintVertical_bias="0.619"
            app:layout_constraintStart_toEndOf="@+id/change_seed" android:hint="Old"/>
    <EditText
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/new_seed"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/to" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/seeds_list" android:layout_marginEnd="101dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="178dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0" android:hint="New"/>
    <TextView
            android:text="@string/to"
            android:layout_width="21dp"
            android:layout_height="29dp" android:id="@+id/to"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" android:layout_marginTop="34dp"
            app:layout_constraintTop_toBottomOf="@+id/seeds_list"
            app:layout_constraintStart_toEndOf="@+id/old_seed" android:layout_marginEnd="164dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="183dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/confirm_button"
            android:layout_marginTop="23dp"
            app:layout_constraintTop_toBottomOf="@+id/seeds_list" android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/new_seed" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="179dp"/>
    <Button
            android:text="@string/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/mutate_button"
            android:layout_marginTop="58dp"
            app:layout_constraintTop_toBottomOf="@+id/old_seed" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="73dp" android:layout_marginEnd="106dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="107dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>